Bug 15936 - samba-bgqd can't find [printers] share
Summary: samba-bgqd can't find [printers] share
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Printing (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-23 08:49 UTC by Andreas Schneider
Modified: 2025-12-18 16:14 UTC (History)
3 users (show)

See Also:


Attachments
patch for 4.23 and 4.22 (2.16 KB, patch)
2025-11-17 09:14 UTC, Andreas Schneider
ab: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2025-10-23 08:49:21 UTC
samba-bgqd can't find [printers] share.

[2025/10/23 09:57:27,  7, pid=41935, effective(0, 0), real(0, 0)] ../../source3/param/loadparm.c:4419(lp_servicenumber)
  lp_servicenumber: couldn't find printers
[2025/10/23 09:57:27,  7, pid=41935, effective(0, 0), real(0, 0)] ../../source3/param/loadparm.c:4419(lp_servicenumber)
  lp_servicenumber: couldn't find printers

We do not load the shares. Patch will follow.
Comment 1 Samba QA Contact 2025-11-14 15:06:19 UTC
This bug was referenced in samba master:

327e60adf2e1e0c040bd32c748fbabc9e4a3593b
Comment 2 Andreas Schneider 2025-11-17 09:14:25 UTC
Created attachment 18774 [details]
patch for 4.23 and 4.22
Comment 3 Alexander Bokovoy 2025-11-18 15:32:16 UTC
Comment on attachment 18774 [details]
patch for 4.23 and 4.22

LTGM.
Comment 4 Andreas Schneider 2025-11-19 10:42:24 UTC
Jule (or Björn) please add the patch to the corresponding branches. Please reassign if Björn took already over. Thanks
Comment 5 Jule Anger 2025-11-21 13:28:38 UTC
Pushed to autobuild-v4-{23,22}-test.
At the moment, I'm still doing it :)
Comment 6 Samba QA Contact 2025-11-21 14:36:03 UTC
This bug was referenced in samba v4-22-test:

cbe63c136e1b7c4db1b37583c9bfb2fc7ddcc3a5
Comment 7 Samba QA Contact 2025-11-21 16:53:11 UTC
This bug was referenced in samba v4-23-test:

84a09551ff8cb5e86d4f85abe90c34233bdc63b0
Comment 8 Jule Anger 2025-11-26 08:42:44 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2025-12-12 13:56:57 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.4):

84a09551ff8cb5e86d4f85abe90c34233bdc63b0
Comment 10 Samba QA Contact 2025-12-18 16:14:28 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.7):

cbe63c136e1b7c4db1b37583c9bfb2fc7ddcc3a5